# MiniVector

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  premake5.lua  run.sh  win96build.sh  win96pack.sh
docs/: badapple.md  pong.md
source/: color.c  color.h  config.c  config.h  display.c  display.h  frame.c  frame.h  gun.c  gun.h  instruction.c  instruction.h  log.h  loop.c  loop.h  main.c  pipe.c  pipe.h  point.c  point.h  renderer.c  renderer.h  shader.c  shader.h  state.h  window.c  window.h
source/legacy/: display.c  display.h  frame.c  frame.h  loop.c  loop.h  renderer.c  renderer.h
source/support/: win96.c  win96.h
src/: color.rs  config.rs  context.rs  instruction.rs  lib.rs  main.rs  processor.rs  result.rs  timing.rs
src/events/: keycode.rs  manager.rs  mod.rs  mouse.rs
src/events/writer/: mod.rs  pipe.rs
src/gfx/: display_colors.rs  electron.rs  framebuffer.rs  mod.rs  point.rs
src/readers/: mod.rs  pipe.rs
src/shaders/: electron.wgsl  framebuffer.wgsl
test/: font_rendering.py  write.py
test/drawings/: helloworld.mv  radar.mv  smiley.mv
test/games/: pong.py
tools/img2mv/: img2mv.py
tools/vid2mv/: vid2mv.py
tools/win96/: inline_worker.py  win96pack.sh
