[package]
name = "minivector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.29.15" }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
encase = { version = "0.7.0", features = ["glam"] }
futures = "0.3"
image = "0.25"
bytemuck = "1.15.0"
glam = "0.25"
instant = "0.1"
hashbrown = "0.14"
slice-deque = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "handleapi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
